[package]
name = "topos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The CLIENT app (lib + thin bin): the 12-verb domain ops, the pull state machine, the sidecar, namespace-atomic materialization, and the device-flow client. A thin sync tool, never an authority — depends on NO SQL and NO plane-store (architectural layering, asserted by a cargo-tree check)."

[features]
# Exposes the narrow, test-only `test_support` module — a public facade an EXTERNAL integration crate (the
# HERO loopback) drives to set up a `~/.topos/` + run the REAL pull engine over the REAL `ureq` transport,
# WITHOUT reaching the client's `pub(crate)` internals. It enables NO dependency (the surface is purely
# client-internal types + the already-present deps) — a CI guard (`check-arch`) asserts it adds no
# `plane-store`/`sqlx`/`tokio` edge and stays OFF in any production build.
test-fixtures = []

# The architectural-layering rule: this binary's graph
# carries NO plane-store, NO sqlx, NO libsqlite3-sys. Enforced by a `cargo tree -p topos` CI check
# (see xtask), NOT a global cargo-deny ban (those crates live elsewhere in the workspace).
# The plane transport (ureq) is wired below; the device-key SIGNER (ed25519-dalek, the client's only
# private-key edge) is now a normal dependency too; the OpenClaw/Hermes harness adapters land later.
[dependencies]
topos-core.workspace = true
topos-types.workspace = true
topos-gitstore.workspace = true
topos-harness.workspace = true
clap = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rustix.workspace = true
# The plane transport: ureq 3, blocking, rustls+ring (the workspace pin, default features). Self-contained
# (its own TLS stack); it carries NO plane-store/sqlx/libsqlite3-sys/tokio edge — check-arch holds the line.
ureq.workspace = true
hex.workspace = true
# base64: ENCODE-side for the enrollment wire (the device public key, base64url, in the authorize/redeem
# bodies) + the contribute candidate's `content_base64` (STANDARD). Wire encoding only — it does not cross
# the architectural line check-arch enforces (no plane-store/sqlx).
base64.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# The device KEYPAIR — the device's presented identity: the public key registers the device at enroll and
# derives the `dk_…` id presented on requests. NOTHING signs with the private key (git/GitHub-level trust:
# the client trusts the plane it enrolled with). Ed25519 over the workspace pin (used for keygen —
# `SigningKey::from_bytes`), opting into `std` + `zeroize` (zeroize restores SigningKey's zero-on-drop that
# the no_std default would strip). `getrandom` is the OS CSPRNG for first-run seed generation; `zeroize`
# wipes the transient raw seed buffer. NONE of these cross check-arch's line (it bans only
# plane-store/sqlx/libsqlite3-sys/tokio/reqwest/hyper).
ed25519-dalek = { workspace = true, features = ["std", "zeroize"] }
getrandom.workspace = true
zeroize.workspace = true
# The self-update asset codec (`topos upgrade`): unpack the release tarball in memory. `flate2` keeps its
# DEFAULT features (the pure-Rust `miniz_oxide` backend — no C zlib edge, honoring the workspace's
# unsafe-forbid + no-C-deps posture); both stay clear of check-arch's ban list.
tar = "0.4"
flate2 = "1"

[lints]
workspace = true
