[package]
name = "plane-store"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The server authority boundary — a crate so that raw access is private. Owns the plane's per-workspace SQL (raw sqlx, no ORM) + git-object storage + skill-scoped authorization. Raw SQL + git object reads are pub(crate)-private; the only public surface is authorized authority operations."

[features]
# Exposes the narrow, feature-gated `Authority` test-fixtures shims (seed roster/device/read-token + drive
# a real genesis publish) so a DOWNSTREAM crate's tests (the OSS plane's HTTP routes, the HERO loopback)
# can stage an authority without a real enrollment subsystem. NEVER enabled by the production `topos-plane`
# build (a CI guard asserts it); the shims grant no capability the production API doesn't already enforce.
test-fixtures = []

[dependencies]
topos-core.workspace = true
topos-types.workspace = true
topos-gitstore.workspace = true
thiserror.workspace = true
# Raw sqlx, NO ORM (held at 0.8.6 for the offline-metadata drift gate). SQLite-first: a local file needs
# no TLS feature. `runtime-tokio` provides the async hookup (the runtime itself is the caller's); `macros`
# = compile-time-checked `query!` against committed `.sqlx`; `migrate` = embedded migrations. NEVER
# `sqlx::Any` (it forfeits compile-time query checking). A future Postgres backend adds `postgres` + a TLS
# feature behind its own module; the SQLite features stay split so that bump is a no-op here.
sqlx = { workspace = true, features = ["runtime-tokio", "macros", "migrate", "sqlite"] }
# Only `tokio::time` — the bounded-backoff sleep the migrate deleting-wait uses while it polls OUTSIDE any
# write transaction (holding it inside one would deadlock GC's finalize on SQLite's single writer). sqlx
# already pulls tokio into this crate's tree via `runtime-tokio`, and the client takes NO edge to
# `plane-store` (check-arch forbids it), so this never reaches the CLI.
tokio = { workspace = true, features = ["time"] }
# The in-process plane SIGNER — this crate is the ONLY private-key holder (topos-core stays verify-only
# no_std). `std` gives std::error::Error on SignatureError; `zeroize` restores SigningKey's ZeroizeOnDrop
# (the root pin is default-features=false, which strips it). `getrandom` seeds first-run key generation;
# `base64` encodes the signed pointer's Signature.value (base64url-unpadded); `uuid` parses the canonical
# op_id into the 16 bytes the device-op signature binds. None of this reaches the client (no topos -> plane-store edge).
ed25519-dalek = { workspace = true, features = ["std", "zeroize"] }
zeroize.workspace = true
base64.workspace = true
getrandom.workspace = true
uuid = { workspace = true }
# Serialize the signed `current` record (a topos-types DTO) into the stored BLOB + the open receipt `details`.
serde_json.workspace = true

[dev-dependencies]
# Drives `#[tokio::test]` — `rt` + `macros` for the runtime + attribute. (`time` comes from the normal dep.)
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
