[package]
name = "plane-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The server authority boundary — a crate so that raw access is private. Owns the plane's per-workspace SQL (raw sqlx, no ORM) + git-object storage + skill-scoped authorization. Raw SQL + git object reads are pub(crate)-private; the only public surface is authorized authority operations."

[features]
# Exposes the narrow, feature-gated `Authority` test-fixtures shims (seed roster/device/read-token + drive
# a real genesis publish) so a DOWNSTREAM crate's tests (the OSS plane's HTTP routes, the HERO loopback)
# can stage an authority without a real enrollment subsystem. NEVER enabled by the production `topos-plane`
# build (a CI guard asserts it); the shims grant no capability the production API doesn't already enforce.
test-fixtures = []

[dependencies]
topos-core.workspace = true
topos-types.workspace = true
topos-gitstore.workspace = true
thiserror.workspace = true
# Raw sqlx, NO ORM (held at 0.8.6 for the offline-metadata drift gate). Postgres-only: `postgres` is the
# sole backend (pure-Rust — no `libsqlite3-sys`, so the plane no longer needs a C toolchain), and
# `tls-rustls-ring-native-roots` gives a BYO/managed Postgres `sslmode=require` over rustls (a compose'd
# localhost Postgres stays plaintext). `runtime-tokio` provides the async hookup (the runtime itself is
# the caller's); `macros` = compile-time-checked `query!` against committed `.sqlx`; `migrate` = embedded
# migrations (its Migrator takes a free `pg_advisory_lock`). NEVER `sqlx::Any` (it forfeits compile-time
# query checking, and would erase the per-backend SERIALIZABLE txn semantics the pointer-move needs).
sqlx = { workspace = true, features = ["runtime-tokio", "macros", "migrate", "postgres", "tls-rustls-ring-native-roots"] }
# `time` — the bounded-backoff sleep the migrate deleting-wait uses while it polls OUTSIDE any write
# transaction (holding it inside one would stall GC's finalize write transaction). `rt` —
# `task::spawn_blocking`, which isolates the fsync-heavy/verify-on-read store sections onto the blocking
# pool so they never pin an async worker. sqlx already pulls tokio into this crate's tree via
# `runtime-tokio`, and the client takes NO edge to `plane-store` (check-arch forbids it), so this never
# reaches the CLI.
tokio = { workspace = true, features = ["time", "rt"] }
# `zeroize` wraps the enrollment secret's seed buffer; `getrandom` mints fresh device/user codes + the
# retry jitter; `base64` is the opaque-credential codec (base64url-unpadded); `uuid` validates the
# canonical op-id spelling the receipt slots key on. None of this reaches the client (no
# topos -> plane-store edge).
zeroize.workspace = true
base64.workspace = true
getrandom.workspace = true
uuid = { workspace = true }
# Serialize the `current` record (a topos-types DTO) into the stored BLOB + the open receipt `details`,
# and deserialize `topos_delivery`'s wire-shaped body into the typed view (serde derive on the
# lane-local mirror structs in `directory/delivery.rs`).
serde.workspace = true
serde_json.workspace = true
# The deterministic opaque-credential derivation: HMAC-SHA256 over the 0600 enrollment secret mints every
# invite / grant / read-token plaintext, so a lost-ack retry re-derives the IDENTICAL credential (and only its
# sha256 is ever stored). `sha2` is the HMAC hash backend (the same 0.10 pin topos-core uses, default-features
# off — Sha256 needs no std). Plane-store-only: the secret never reaches the client (no topos -> plane-store edge).
hmac.workspace = true
sha2.workspace = true

[dev-dependencies]
# Drives `#[tokio::test]` — `rt` + `macros` for the runtime + attribute. (`time` comes from the normal dep.)
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
