[package]
name = "plane-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The vault's byte-custody boundary — a crate so that raw access is private. Owns the plane's per-workspace SQL (raw sqlx, no ORM) + git/large-object storage: content-addressed versions, the generation-fenced current pointer, and the GC fence. Raw SQL + raw object reads are pub(crate)-private; the only public surface is the custody operations on Authority."

[features]
# Exposes `Authority::from_pool` + the embedded MIGRATOR so a DOWNSTREAM crate's tests (the OSS
# plane's HTTP routes, the loopback e2e) can provision a per-test database and drive a real
# authority. NEVER enabled by the production `topos-plane` build (a CI guard asserts it).
test-fixtures = []

[dependencies]
topos-core.workspace = true
topos-gitstore.workspace = true
thiserror.workspace = true
# Raw sqlx, NO ORM (held at 0.8.6 for the offline-metadata drift gate). Postgres-only: `postgres` is the
# sole backend (pure-Rust — no C toolchain), and `tls-rustls-ring-native-roots` gives a BYO/managed
# Postgres `sslmode=require` over rustls (a compose'd localhost Postgres stays plaintext).
# `runtime-tokio` provides the async hookup (the runtime itself is the caller's); `macros` =
# compile-time-checked `query!` against committed `.sqlx`; `migrate` = embedded migrations (its
# Migrator takes a free `pg_advisory_lock`). NEVER `sqlx::Any` (it forfeits compile-time query
# checking, and would erase the per-backend SERIALIZABLE txn semantics the pointer CAS needs).
sqlx = { workspace = true, features = ["runtime-tokio", "macros", "migrate", "postgres", "tls-rustls-ring-native-roots"] }
# `time` — the bounded-backoff sleep the ingest deleting-wait uses while it polls OUTSIDE any write
# transaction (holding one would stall GC's finalize write transaction). `rt` — `task::spawn_blocking`,
# which isolates the fsync-heavy/verify-on-read store sections onto the blocking pool. sqlx already
# pulls tokio into this crate's tree via `runtime-tokio`, and the client takes NO edge to `plane-store`
# (check-arch forbids it), so this never reaches the CLI.
tokio = { workspace = true, features = ["time", "rt"] }
# `getrandom` mints the per-ingest op ids and the serializable-retry jitter.
getrandom.workspace = true
# The serializable-retry breadcrumb (a `debug!` per re-run) — diagnostics only.
tracing.workspace = true

[dev-dependencies]
# Drives `#[tokio::test]` — `rt` + `macros` for the runtime + attribute. (`time` comes from the normal dep.)
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
