[package]
name = "topos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "THE PURE TRUST LOGIC — deterministic functions over explicit values, over its OWN validated domain newtypes. No I/O, no traits, no ambient clock/RNG. Every trust invariant is a unit or seeded generative test here. Does NOT depend on topos-types."

# The kernel pulls ONLY hashing + canonical-form primitives (asserted by `cargo xtask check-arch` — no
# I/O/async/storage/crypto crates). `sha2` is the content-addressing hash; `unicode-normalization` does
# the NFC path-collision fold in `digest`. No keys, no signatures.
[dependencies]
sha2 = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
# Test-only (std is available under `cfg(test)`): `hex` decodes the pinned known-answer vectors.
hex = { workspace = true }

[lints]
workspace = true
