[package]
name = "topos-gitstore"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Shared dumb gix object mechanics: read/write, dedup, tree→empty-staging-dir render, diff/diff3 execution, topos-sha256-ID ↔ git-OID mapping. Re-verifies bytes→sha256 on every read. Holds NO access control."

[dependencies]
topos-core.workspace = true
topos-types.workspace = true
thiserror.workspace = true
# Plumbing-only: object read/write + the tree editor + sha1 hashing + ref edits. No worktree/index/
# network/blob-diff/status — those heavy defaults aren't needed for a dumb byte/object layer.
gix = { workspace = true, features = ["sha1", "tree-editor"] }
# The diff ENGINE for the unified-diff renderer (pure-Rust histogram/Myers). The unified-diff FORMATTING is
# owned in `diff.rs`, so the committed `diff` golden stays byte-stable across imara-diff releases.
imara-diff = { workspace = true }

[lints]
workspace = true
