[package]
name = "topos-gitstore"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Shared dumb gix object mechanics: read/write, dedup, tree→empty-staging-dir render, diff/diff3 execution, topos-sha256-ID ↔ git-OID mapping. Re-verifies bytes→sha256 on every read. Holds NO access control."

[dependencies]
topos-core.workspace = true
thiserror.workspace = true
# Plumbing-only: object read/write + the tree editor + sha1 hashing + ref edits. Dropping the default
# features keeps the heavy worktree/index/status/blame/submodule trees out. (The `gix` umbrella still
# pulls its protocol-plumbing crates unconditionally, but with no network-client feature on there is no
# active transport, socket, or TLS — a dumb byte/object layer needs none of it.)
gix = { workspace = true, features = ["sha1", "tree-editor"] }
# The diff ENGINE for the unified-diff renderer (pure-Rust histogram/Myers). The unified-diff FORMATTING is
# owned in `diff.rs`, so the committed `diff` golden stays byte-stable across imara-diff releases.
imara-diff = { workspace = true }
# The per-file three-way (diff3) content-merge ENGINE. Pinned exact + golden-vectored: its conflict-marker
# bytes are a consent artifact, so an upgrade is a reviewed change. Used only by `merge.rs`.
diffy = { workspace = true }

[lints]
workspace = true
