[package]
name = "topos-harness"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The HarnessAdapter trait + its 3 impls (Claude Code reference · OpenClaw · Hermes) — the ONE real client-side port. Discovery + byte-exact placement + currency-trigger install. Content-blind: no translate/project. All platform/harness-version deps live here."

[dependencies]
topos-core.workspace = true
topos-types.workspace = true
serde_json.workspace = true # strict-JSON config edit for the Claude Code settings.json hook (content-blind)

[lints]
workspace = true
